fix for file page not showing in ff and safari

--- a/src/main/webapp/assets/stylesheets/ae_files.css
+++ b/src/main/webapp/assets/stylesheets/ae_files.css
@@ -1,3 +1,13 @@
+.ae_left_container_100pc {
+    width: 100%;
+    min-width: 950px;
+    text-align: left;
+    margin: 0;
+    overflow: hidden;
+    font-size: 11px;
+    line-height: 1.2em;
+}
+
 #ae_files_content {
     width: 700px;
     margin: 20px;
